# MarketMinds

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf  run_backend.ps1  test_request.json
.github/: dependabot.yml
client/: .eslintrc.js  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
server/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml  pytest.ini  requirements.txt  seed_db.py  train_sync.py
server/alembic/: env.py
server/alembic/versions/: 01ac7040ab76_initial_schema.py
server/api/: __init__.py  dependencies.py
server/api/routes/: __init__.py  assets.py  headlines.py  health.py  pipeline.py  predict.py  prices.py  sentiment.py
server/core/: __init__.py  cache_middleware.py  config.py  database.py  exceptions.py  limiter.py  model_prewarm.py  monitoring.py  sanitization.py  security_headers.py
server/data/: indian_stocks.json
server/ml/: __init__.py  finbert_analyzer.py  lstm_model.py
server/models/: AAPL_mock.json  RELIANCE.NS_mock.json  RELIANCE.NS_mock_v1.json  __init__.py  models.py
server/pipelines/: __init__.py  daily_ingestion.py
server/schemas/: __init__.py  schemas.py  token.py
server/scripts/: export_openapi.py
server/services/: __init__.py  data_ingestion.py  feature_engineering.py  prediction_service.py  sentiment_engine.py
server/tests/: __init__.py  conftest.py  test_data_ingestion.py  test_health.py  test_models.py  test_pipeline.py  test_prediction.py  test_rate_limit.py  test_sentiment.py
(+48 files in other folders)
